added margin and padding utility classes

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,2 +1,9 @@
+//Variables
 @forward "@/styles/variables";
-@forward "@/styles/breakpoint";
+
+//Mixins
+@forward "@/styles/mixins/breakpoint";
+
+//Utilities
+@forward "@/styles/utilities/margin";
+@forward "@/styles/utilities/padding";
