added color utility classes, removed style.scss so all global styles can originate from base.scss

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,10 @@
-$primary-color: #333;
-$text-color: #fff;
+//Color
+$color-white: #FFF !default;
+$color-black: #080808 !default;
+$color-primary: #29D9C2 !default;
+$color-secondary: #00BCD4 !default;
+$color-tertiary: #3498DB !default;
+$color-border: #DDD !default;
 
 //Spacing
 $spacer-0: 0 !default;
