--- a/src/styles/utilities/_margin.scss
+++ b/src/styles/utilities/_margin.scss
@@ -1,5 +1,5 @@
 @use "@/styles/variables" as *;
-@use "@/styles/mixins/breakpoint.scss" as *;
+@use "@/styles/mixins/breakpoint" as *;
 
 .m {
   &-0 {
