--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,13 @@
+//Breakpoints
+$breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+) !default;
+
 //Color
 $color-white: #FFF !default;
 $color-black: #080808 !default;
@@ -5,25 +15,6 @@ $color-primary: #29D9C2 !default;
 $color-secondary: #00BCD4 !default;
 $color-tertiary: #3498DB !default;
 $color-border: #DDD !default;
-
-//Typography
-$base-font-size: 1rem !default; // Assumes the browser default, typically `16px`
-
-$title-font-size: $base-font-size * 4 !default; //64px at 16px root font size
-
-$h1-font-size: $base-font-size * 3 !default; //48px at 16px root font size
-$h1-font-size-md: $base-font-size * 3.125 !default; //50px at 16px root font size
-$h1-font-size-sm: $base-font-size * 2.875 !default; //46px at 16px root font size
-
-$h2-font-size: $base-font-size * 2.5 !default; //40px at 16px root font size
-$h2-font-size-sm: $base-font-size * 1.875 !default; //30px at 16px root font size
-
-$h3-font-size: $base-font-size * 2 !default; //32px at 16px root font size
-$h3-font-size-sm: $base-font-size * 1.75 !default; //28px at 16px root font size
-
-$h4-font-size: $base-font-size * 1.5 !default; //24px at 16px root font size
-$h5-font-size: $base-font-size * 1.25 !default; //20px at 16px root font size
-$h6-font-size: $base-font-size * .875 !default; //14px at 16px root font size
 
 //Spacing
 $spacer: 1rem !default; //16px at 16px root font size
@@ -39,11 +30,21 @@ $spacers: (
   auto: auto
 ) !default;
 
-$breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+//Typography
+$base-font-size: 1rem !default; // Assumes the browser default, typically `16px`
+$h1-font-size: $base-font-size * 3 !default; //48px at 16px root font size
+$h2-font-size: $base-font-size * 2.5 !default; //40px at 16px root font size
+$h3-font-size: $base-font-size * 2 !default; //32px at 16px root font size
+$h4-font-size: $base-font-size * 1.5 !default; //24px at 16px root font size
+$h5-font-size: $base-font-size * 1.25 !default; //20px at 16px root font size
+$h6-font-size: $base-font-size * 1 !default; //14px at 16px root font size
+
+$font-sizes: (
+  fs-1: $base-font-size * .875, //14px at 16px root font size
+  fs-2: $base-font-size, //16px at 16px root font size
+  fs-3: $base-font-size * 1.75, //28px at 16px root font size
+  fs-4: $base-font-size * 1.875, //30px at 16px root font size
+  fs-5: $base-font-size * 2.875, //46px at 16px root font size
+  fs-6: $base-font-size * 3.125, //50px at 16px root font size
+  fs-7: $base-font-size * 4, //64px at 16px root font size
 ) !default;
