--- a/src/styles/mixins/_spacing.scss
+++ b/src/styles/mixins/_spacing.scss
@@ -1,16 +1,14 @@
 @use "@/styles/variables" as *;
 @use "@/styles/mixins/breakpoint" as *;
 
+//Generates margin and padding utility classes
 @mixin spacing($prefix, $properties) {
-
   @if type-of($properties) == "string" {
     $properties: append((), $properties);
   }
-
   @each $breakpoint in map-keys($breakpoints) {
     @include breakpoint($breakpoint) {
       $infix: breakpoint-infix($breakpoint, $breakpoints);
-
       @each $spacer in map-keys($spacers) {
         .#{$prefix}-#{$spacer}#{$infix} {
           @each $property in $properties {
